[gd_scene load_steps=6 format=2]

[ext_resource path="res://RaptorRender/GUI/SortableTable/TopRow/ColumnButton.gd" type="Script" id=1]
[ext_resource path="res://RaptorRender/GUI/SortableTable/images/primary_down_32x32.png" type="Texture" id=2]
[ext_resource path="res://RaptorRender/GUI/SortableTable/images/secondary_down_32x32.png" type="Texture" id=3]
[ext_resource path="res://RaptorRender/GUI/SortableTable/images/primary_up_32x32.png" type="Texture" id=4]
[ext_resource path="res://RaptorRender/GUI/SortableTable/images/secondary_up_32x32.png" type="Texture" id=5]

[node name="ColumnButton" type="Button"]
margin_right = 156.0
margin_bottom = 22.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 3
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 3.0
margin_right = 156.0
margin_bottom = 22.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 145.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Sample Button"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 153.0
margin_bottom = 22.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
size_flags_vertical = 3
custom_constants/margin_right = 5

[node name="primary_down" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
visible = false
modulate = Color( 0.515747, 0.602618, 0.660156, 1 )
margin_right = 8.0
margin_bottom = 22.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="secondary_down" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
visible = false
modulate = Color( 0.515747, 0.602618, 0.660156, 1 )
margin_right = 8.0
margin_bottom = 22.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="primary_up" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
visible = false
modulate = Color( 0.515747, 0.602618, 0.660156, 1 )
margin_right = 8.0
margin_bottom = 22.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="secondary_up" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer"]
visible = false
modulate = Color( 0.515747, 0.602618, 0.660156, 1 )
margin_right = 8.0
margin_bottom = 22.0
rect_min_size = Vector2( 8, 8 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
[connection signal="pressed" from="." to="." method="_on_ColumnButton_pressed"]
